k8s/template/service.yml
apiVersion: v1
kind: Service
metadata:
  name: $APP
  namespace: $NAMESPACE
spec:
  type: ClusterIP
  selector:
    app: $APP
  ports:
    - name: http
      port: 80
      targetPort: 80
