k8s/template/ingress-whatsapp-dev.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: $APP-whatsapp-dev
  namespace: $NAMESPACE
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/cors-allow-headers: "authorization,content-type"
    nginx.ingress.kubernetes.io/cors-exposed-headers: "authorization,content-type"
spec:
  tls:
    - hosts:
        - api-whatsapp-dev.support-pp.de
      secretName: $APP-whatsapp-dev-tls
  rules:
    - host: api-whatsapp-dev.support-pp.de
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: api-spp-dev
                port:
                  name: http
